20371
When you try to define a float with the value 3.4028235E38F you get "error: floating point number too large":
{code:java}
scala> 3.4028235E38F
<console>:1: error: floating point number too large
3.4028235E38F
^
{code}

whereas in java everything is fine:
{code:java}
java> 3.4028235E38F
java.lang.Float res0 = 3.4028235E38
{code}

you can even define it in scala with java methods:
{code:java}
scala>  java.lang.Float.intBitsToFloat(2139095039)
res0: Float = 3.4028235E38
{code}
